--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>spring-test</artifactId>
             <version>5.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
