JDBC - erste Rechnungen

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.3.1</version>
         </dependency>
+        <!-- This is only spring-jdbc and not spring-data-jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.7.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
@@ -92,6 +98,12 @@
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
             <version>3.0.11.RELEASE</version>
+        </dependency>
+        <!-- In Memory Database ** -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
         </dependency>
     </dependencies>
 
